PHOEBE Project ChangeLog:
----------------------------------------------------------------------------

2005-05-30: - Computing residuals in both LC and RV windows was done before
              aliasing took place, which meant that the residuals were com-
	      puted against the original (i.e. non-aliased) data. This in
	      turn meant that the phases were out-of-sync between aliased
	      data and residuals. This is now fixed. Many thanks to Keivan
	      Stassun for pointing this out!
2005-04-30: - PHOEBE installed without issues under Mandrake 9.1. Many
              thanks to Keith Bambery for reporting this!
2005-04-23: - A check added for C and Fortran compilers to configure.in.
              If they're not found, the configure script will exit with a
	      notification message. This was a major support hurdle, so it
	      should now help resolve common installation problems more
	      easily.
	    - A check added for netpbm package that contains ppmtoxpm tool
	      to configure.in. It was common to be able to compile and
	      run PHOEBE, but the plotting window wasn't able to convert
	      plots to xpm and hence there were no plots shown on screen.
	    - If SuperMongo isn't installed, the option to use it should
	      be shaded. The same goes for gnuplot. Fixed.
2005-04-18: - If physical parameters (T, M, log g) for LD tables were out-
              of-range, PHOEBE segfaulted. A range check is now added which
	      sets all LD coefficients to 0.5 if the overflow occurs.
            - Synchronicity parameters F1 and F2 were limited to the [0,1]
	      interval, which doesn't make sense if the stars are rotating
	      faster about their axis than is their period. It has now been
	      set to 10.
2005-04-14: - A new dedicated function added that renumbers all filters that
              share the same name. FOTEL parser suffered from this issue and
	      it now works in all cases where the 21st column of the FOTEL